--- a/kirana-store/src/main/resources/templates/index.html
+++ b/kirana-store/src/main/resources/templates/index.html
@@ -4,18 +4,26 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
+<link href="./css/styles.css" rel="stylesheet" type="text/css">
+<link href="webjars/bootstrap-table/1.9.1/bootstrap-table.min.css" rel="stylesheet">
 
 </head>
 <body>
 
+<div th:replace="fragments/navbar :: navbar"></div>
 
+<div class="container">
+	<!-- <div th:insert="fragments/products :: products"></div> -->
+	<div th:insert="fragments/products :: product-table"></div>
+</div>
 
 
 <div th:insert="fragments/footer :: footer"></div>
 
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
 <script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="webjars/bootstrap-table/1.9.1/bootstrap-table.min.js"></script>
+			 
 
 </body>
 </html>
